Update iniciar.bat
Arreglado error al inciar