@@ -1,5 +1,5 @@
 @echo off
 
 title Proxy
-java -Xms512M -Xmx1024M -XX:MaxPermSize=128M -jar BungeeCord.jar
+java -Xms512M -Xmx1024M -jar BungeeCord.jar
 pause
